--- a/index.css
+++ b/index.css
@@ -3,4 +3,13 @@ h1{
     text-decoration: underline;
     font-family: 'Courier New', Courier, monospace;
     font-size: x-large;
+
+}
+#title{
+    text-align: center;
+    text-decoration: underline;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: x-large;
+    background-color: blue;
+    color: aliceblue;
 }
